WIP. Refactor. Main goal is to remove tests real service dependence using stubs

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-.rvmrc
 *.swp
 *~
-examples_helpers/config/clave.emitter
-examples_helpers/config/few-parameters.emitter
-examples_helpers/config/templates/private.sms
+.rvmrc
 .yardoc
-doc
 .bundle
 .metrics
+.ruby-version
+.ruby-gemset
 coverage
-tmp
+doc
 pkg
+tmp
 Gemfile.lock
